@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2464: mailing list for all auth users and anonymous
 - #2049: detailed subscriptions summary
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
